[package]
name = "crud_app"
version = "0.1.0"
authors = ["ofaroque <ofaroque@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
rusoto_dynamodb = "0.44.0"
rusoto_core = "0.44.0"
serde_dynamodb = "0.2.1"
